client/src/sass/main.scss
/* ... */
.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  z-index: 10;

  header {
    height: 43px;
  }

  .editor {
    position: fixed;
    top: 50%;
    left: 50%;
    background-color: #F7F7F7;
    width: 900px;
    height: 576px;
    margin-top: -278px;
    margin-left: -453px;
    z-index: 1001;

    .close {
      float:right;
      margin-top: -30px;
      margin-right: 5px;
      cursor: pointer;
    }

    header {
      padding: 25px;
      border: 0;
      margin-bottom: 0;
    }
  }
}

footer{
  margin-top: 40px;
  background-color: $bkgGrey;
  width: 100%;
  min-width: 980px;
  padding: 50px 0;
  border-top: 1px solid #ddd;
  .inner{
    width: 980px;
    margin: 0 auto;
    text-align: center;
    h3{
      color: $mainFont;
      font-weight: 600;
      margin-bottom: 30px;
    }
  }
  img{
    margin: 0 25px;
  }
}

.medium-editor-placeholder { position: fixed !important; }

.edit-bar-container {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 3;
  background-color: #444;
  border-bottom: 1px solid $lightGrey;
  height: 50px;
  padding: 5px 0;
  box-shadow: 0 0 3px rgba(0,0,0,0.15);
  top: 79px;
  @include transition(top 0.6s ease-in-out);

  .edit-bar {
    width: 980px;
    margin: auto;
    overflow: hidden;
    .back {
      float: left;
      overflow: hidden;
      p {
        display: block;
        color: $lightishGrey;
        font-size: 0.8em;
        line-height: 50px;
      }
    }

    .publish-delete {
      float: right;
      padding-top: 8px;
      a.button {
        padding: 5px 15px;
        float: right;
        margin-left: 10px;
        line-height: normal;

        &#publish, &#publish:active {
          color: $white;
          background-color: $green;
          border-color: $green;
        }
        &#save:hover, &#save:active {
          color: #444;
          background-color: $white;
          border-color: $white;
        }
        &#delete:hover, &#delete:active {
          color: $white;
          background-color: $red;
          border-color: $red;
        }
      }
    }
  }
}

@import "charts";

.md-modal {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 50%;
  width: 850px;
  height: auto;
  z-index: 2000;
  visibility: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.md-show {
  visibility: visible;
}

.md-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  visibility: hidden;
  top: 0;
  left: 0;
  z-index: 1000;
  opacity: 0;
  background: rgba(0,0,0,0.8);
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

.md-show ~ .md-overlay {
  opacity: 1;
  visibility: visible;
}

.md-box {
  color: $mediumGrey;
  background: $white;
  position: relative;
  border-radius: 3px;
  margin: 0 auto;
  font-weight: 300;
  font-size: 1.15em;
  zoom: 1;
}

.md-box .md-title {
  overflow: hidden;
  border-bottom: 1px solid $lightGrey;
  padding: 20px 30px;
  font-weight: 400;

}

.md-box h3 {
  color: $mainFont;
  color: rgba(0,0,0,0.8);
  font-size: 1.2em;
  font-weight: 400;
  width: 490px;
  float: left;
}

.md-box .md-content{
  padding: 20px 0 20px 30px;
  overflow: hidden;
  position: relative;
  height: 300px;
}

.md-box .md-content > p {
  width: 425px;
  line-height: 1.6em;
  color: $mainFont;
  color: rgba(0,0,0,0.8);
  margin-top: 15px;
  font-weight: 400;
}

.md-box .md-content img {
  position: absolute;
  top: 0;
  right: 0;
  width: 445px;
  height: auto;
}


.md-box .md-buttons{
  margin-top: 10px;
  padding: 20px 30px;
  border-top: 1px solid $lightGrey;
  overflow: hidden;
}

.md-box button {
  display: inline;
  margin: 0 auto;
  font-size: 0.8em;
  &.know-more {
    float: left;
  }
  &.md-close {
    float: right;
    color: $white;
    background-color: $buttonBlue;
    border: 1px solid $buttonBlue;
    &:hover {
      color: $white;
      border: 1px solid darken($buttonBlue, 10);
    }
    &:active{
      color: $white;
      background-color: darken($buttonBlue, 10);
      border: 1px solid darken($buttonBlue, 10);
    }
  }
  &.feedback {
      float: right;
      margin-top: 4px;
      display: inline;
      font-size: 0.7em;
      color: $white;
      background-color: $green;
      border: 1px solid $green;
      &:hover {
        color: $white;
        border: 1px solid darken($green, 10);
      }
      &:active{
        color: $white;
        background-color: $greenHover;
        border: 1px solid $greenHover;
      }
    }
}

.md-effect-1 .md-box {
  -webkit-transform: scale(0.7);
  -moz-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  opacity: 0;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

.md-show.md-effect-1 .md-box {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

